CHANGES
=======

1.0.23
------

* Bump version 1.0.23
* Fix: pop 'many' from kwargs with default to avoid error if this keyword is not into kwargs

1.0.22
------

* Bump version 1.0.22
* FIx load of nested many models

1.0.21
------

* Bump version 1.0.21
* Autoformat
* Fix model multi inheritance
* Fix compatability with version 3.0.0

1.0.20
------

* Bump version 1.0.20
* Fix branches regex and bump\_version tool
* Fix compatability with version 3.0.0rc6
* Test marshmallow 3.0.0rc6
* Test 2.19.2 and 3.0.0rc5
* Test against 2.19.1
* Test against 2.18.1 and 3.0.0rc4 versions

1.0.19
------

* Bump version 1.0.19
* Auto formatting
* Implement a custom \_\_deepcopy\_\_ magic method to sidestep the unpickleable thread lock
* Test against 2.18.0 and 3.0.0rc3 versions
* Test against 2.17.0 and 3.0.0rc2 versions
* Test against 3.0.0rc1 version

1.0.18
------

* Bump version 1.0.18
* Migrating to travis-ci.com
* Test against versions 2.16.3 and 3.0.0.b20
* Test against versions 2.16.2 and 3.0.0.b19

1.0.17
------

* Bump version 1.0.17
* Support markdown format for project description
* Test with new vesion of Marshmallow

1.0.16
------

* Bump version 1.0.16
* Update setuptools on deploy
* Push bump commit to master

1.0.15
------

* Bump version 1.0.15
* Add AUTHORS and ChangeLog files
* Test with new Marshmallow versions
* Fix deploy
* Exclude missing fields in serialized output
* Fix load\_ini function
* Use build stages of travis-ci
* Fix BContext test model
* Test with Marshmallow v2 and v3

1.0.14
------

* Override on\_bind\_field and handle\_error methods

1.0.13
------

* Fix pre/post hooks working

1.0.12
------

* Fix #29

1.0.11
------

* Use pbr=4.0.1

1.0.10
------

* Support "class Meta" options

1.0.9
-----

* Set description-content-type to text/markdown

1.0.8
-----

* Supporting Marshmallow's 3.x line

1.0.7
-----

* Update bump\_version script
* Add link to Cookbook
* Add pypi badge
* Update README.md

1.0.6
-----

* Add support of fields.Method
