@@ -1,1 +1,1 @@
-marshmallow
+marshmallow>=3.0.0
